--- a/package.json
+++ b/package.json
@@ -31,7 +31,9 @@
     "npm": "^11.6.1",
     "react": "19.1.0",
     "react-dom": "19.1.0",
+    "react-full-page": "^0.1.12",
     "react-icons": "^5.5.0",
+    "react-page-scroller": "^3.0.1",
     "react-toastify": "^11.0.5",
     "react-typed": "^2.0.12",
     "sass": "^1.93.2",
