--- a/package.json
+++ b/package.json
@@ -13,7 +13,6 @@
     "@dnd-kit/core": "^6.3.1",
     "@dnd-kit/sortable": "^10.0.0",
     "@dnd-kit/utilities": "^3.2.2",
-    "@fullpage/react-fullpage": "^0.1.49",
     "@radix-ui/react-dialog": "^1.1.15",
     "@radix-ui/react-dropdown-menu": "^2.1.16",
     "@radix-ui/react-slot": "^1.2.3",
@@ -21,6 +20,7 @@
     "@supabase/auth-ui-shared": "^0.1.8",
     "@supabase/ssr": "^0.7.0",
     "@supabase/supabase-js": "^2.57.4",
+    "@tanstack/react-query": "^5.90.5",
     "canvas-confetti": "^1.9.3",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
@@ -31,9 +31,7 @@
     "npm": "^11.6.1",
     "react": "19.1.0",
     "react-dom": "19.1.0",
-    "react-full-page": "^0.1.12",
     "react-icons": "^5.5.0",
-    "react-page-scroller": "^3.0.1",
     "react-toastify": "^11.0.5",
     "react-typed": "^2.0.12",
     "sass": "^1.93.2",
@@ -41,6 +39,8 @@
   },
   "devDependencies": {
     "@tailwindcss/postcss": "^4",
+    "@tanstack/eslint-plugin-query": "^5.91.2",
+    "@tanstack/react-query-devtools": "^5.90.2",
     "@types/node": "^20",
     "@types/react": "^19",
     "@types/react-dom": "^19",
