init quizzes of category page

--- a/components.json
+++ b/components.json
@@ -5,18 +5,18 @@
   "tsx": true,
   "tailwind": {
     "config": "",
-    "css": "src/app/globals.css",
+    "css": "src/global/globals.css",
     "baseColor": "neutral",
     "cssVariables": true,
     "prefix": ""
   },
   "iconLibrary": "lucide",
   "aliases": {
-    "components": "@/components",
-    "utils": "@/lib/utils",
-    "ui": "@/components/ui",
-    "lib": "@/lib",
-    "hooks": "@/hooks"
+    "components": "@/global/components",
+    "utils": "@/global/lib/utils",
+    "ui": "@/global/components/ui",
+    "lib": "@/global/lib",
+    "hooks": "@/global/hooks"
   },
   "registries": {}
 }
