--- a/package.json
+++ b/package.json
@@ -26,16 +26,18 @@
     "clsx": "^2.1.1",
     "framer-motion": "^12.23.12",
     "i": "^0.3.7",
+    "immer": "^10.2.0",
     "lucide-react": "^0.545.0",
-    "next": "15.5.3",
+    "next": "^16.0.1",
     "npm": "^11.6.0",
-    "react": "19.1.0",
-    "react-dom": "19.1.0",
+    "react": "^19.2.0",
+    "react-dom": "^19.2.0",
     "react-icons": "^5.5.0",
     "react-toastify": "^11.0.5",
     "react-typed": "^2.0.12",
     "sass": "^1.93.2",
-    "tailwind-merge": "^3.3.1"
+    "tailwind-merge": "^3.3.1",
+    "zustand": "^5.0.8"
   },
   "devDependencies": {
     "@eslint/eslintrc": "^3.3.1",
@@ -43,8 +45,8 @@
     "@tanstack/eslint-plugin-query": "^5.91.2",
     "@tanstack/react-query-devtools": "^5.90.2",
     "@types/node": "^20",
-    "@types/react": "^19",
-    "@types/react-dom": "^19",
+    "@types/react": "^19.2.2",
+    "@types/react-dom": "^19.2.2",
     "eslint": "^9.39.0",
     "eslint-config-next": "^16.0.1",
     "eslint-config-prettier": "^10.1.8",
