--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "npm": "^11.6.0",
     "react": "^19.2.0",
     "react-dom": "^19.2.0",
+    "react-error-boundary": "^6.0.0",
     "react-icons": "^5.5.0",
     "react-toastify": "^11.0.5",
     "react-typed": "^2.0.12",
