--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "canvas-confetti": "^1.9.3",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
+    "dayjs": "^1.11.19",
     "framer-motion": "^12.23.12",
     "i": "^0.3.7",
     "immer": "^10.2.0",
