--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "@supabase/ssr": "^0.7.0",
     "@supabase/supabase-js": "^2.57.4",
     "@tanstack/react-query": "^5.90.5",
+    "@types/postcss-pxtorem": "^6.1.0",
     "canvas-confetti": "^1.9.3",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
@@ -31,6 +32,7 @@
     "lucide-react": "^0.545.0",
     "next": "^16.0.1",
     "npm": "^11.6.0",
+    "postcss-pxtorem": "^6.1.0",
     "react": "^19.2.0",
     "react-dom": "^19.2.0",
     "react-error-boundary": "^6.0.0",
