--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "immer": "^10.2.0",
     "lucide-react": "^0.545.0",
     "next": "^16.0.1",
+    "next-intl": "^4.8.2",
     "npm": "^11.6.0",
     "postcss-pxtorem": "^6.1.0",
     "react": "^19.2.0",
